# suturo_resources

./: README.md  rosinstall.rosinstall
messages/knowledge_msgs/: CMakeLists.txt
suturo_bringup/: CMakeLists.txt  package.xml
suturo_bringup/config/: hsrb_controller_config.yaml
suturo_bringup/launch/: doors_test.launch  robocup_bringup.launch  suturo_bringup.launch  visual_servoing_bringup.launch
suturo_bringup/scripts/: init_joint_positions.py
suturo_resources/: CMakeLists.txt
suturo_resources/urdf/: hsr_movable_door.urdf.xacro
suturo_resources/urdf/urdf_components/: suturo_shelf.urdf.xacro
suturo_room_viz/: CMakeLists.txt
